--- a/src/components/categoryitem.css
+++ b/src/components/categoryitem.css
@@ -1,16 +1,16 @@
 .categoryitem_container {
-    flex: 1;
-    margin: 3px;
+    flex:1;
+    margin:10px;
     height: 70vh;
+    min-width:40px;
+    background-color:#f5fbfd;
     position: relative;
 }
-
 .category_image {
     width:100%;
     height:100%;
-    object-fit: cover;
+    object-fit: cover;  
 }
-
 .category_info_container { 
     position: absolute;
     width: 100%;
@@ -20,14 +20,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center;   
 }
-
 .category_title {
     color: white;
     margin-bottom: 20px;
 }
-
 .category_btn {
     padding: 10px;
     border: none;
@@ -35,4 +33,14 @@
     font-weight: 600;
     background-color: white;
     cursor: pointer;
+}
+.category_btn:hover{
+    background-color: black;
+    
+}
+@media only screen and (max-width:1200px){
+    .categoryitem_container{
+        min-width: 380px;
+            height: 650px;
+    }
 }
